cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_09150_ContainersBase.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: 'This template creates some basic infrastructure with which to build a EC2 stack. It creates a VPC with two public subnets in different availability zones, in the eu-west-1 (Ireland) region. It also creates a security group that allows SSH traffic'

Outputs:

  # --- Networks ---
  ContainersEC2Subnet1Out:
    Description: A subnet in the eu-west-1a region and zone.
    Value: !Ref EC2Subnet1
    Export:
      Name: ContainersEC2Subnet1Out

  ContainersEC2Subnet2Out:
    Description: A subnet in the eu-west-1b region and zone.
    Value: !Ref EC2Subnet2
    Export:
      Name: ContainersEC2Subnet2Out

  # --- Security Groups ---
  # EC2 Instances require the Security Group Id instead of the Security Group Resource
  ContainersEC2SecurityGroupSSHGroupIdOut:
    Description: This Security Group allows SSH traffic on port 22.
    Value:
      Fn::GetAtt:
        - EC2SecurityGroupSSH
        - GroupId
    Export:
      Name: ContainersEC2SecurityGroupSSHGroupIdOut

  # EC2 Instances require the Security Group Id instead of the Security Group Resource
  ContainersEC2SecurityGroupHTTPGroupIdOut:
    Description: This Security Group allows HTTP traffic on port 80.
    Value:
      Fn::GetAtt:
        - EC2SecurityGroupHTTP
        - GroupId
    Export:
      Name: ContainersEC2SecurityGroupHTTPGroupIdOut

  # --- IAM ---
  ContainersIAMInstanceProfileECRFullAccessOut:
    Description: This profile allows all actions on all ECR resources
    Value: !Ref IAMInstanceProfileECRFullAccess
    Export:
      Name: ContainersIAMInstanceProfileECRFullAccessOut

  ContainersIAMInstanceProfileECSFullAccessOut:
    Description: This profile allows all actions on all ECS resources
    Value: !Ref IAMInstanceProfileECSFullAccess
    Export:
      Name: ContainersIAMInstanceProfileECSFullAccessOut

  ContainersIAMInstanceProfileEC2ContainerInstanceOut:
    Description: This profile allows EC2 instances to register themselves in an ECS Cluster
    Value: !Ref IAMInstanceProfileEC2ContainerInstance
    Export:
      Name: ContainersIAMInstanceProfileEC2ContainerInstanceOut

Resources:

  # --- Networks ---
  EC2VPC:
  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-vpc.html
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 192.168.0.0/16

  EC2Subnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref EC2VPC
      CidrBlock: 192.168.0.0/24
      AvailabilityZone: "eu-west-1a"
      MapPublicIpOnLaunch: true

  EC2Subnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref EC2VPC
      CidrBlock: 192.168.1.0/24
      AvailabilityZone: "eu-west-1b"
      MapPublicIpOnLaunch: true

  EC2InternetGateway:
  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-internetgateway.html
    Type: "AWS::EC2::InternetGateway"
    Properties: {}

  EC2VPCGatewayAttachment:
  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-vpc-gateway-attachment.html
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref EC2InternetGateway
      VpcId: !Ref EC2VPC

  EC2RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref EC2VPC

  EC2InternetRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref EC2InternetGateway
      RouteTableId: !Ref EC2RouteTable

  EC2SubnetRouteTableAssociation1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref EC2RouteTable
      SubnetId: !Ref EC2Subnet1

  EC2SubnetRouteTableAssociation2:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref EC2RouteTable
      SubnetId: !Ref EC2Subnet2

  # --- Security Groups ---
  EC2SecurityGroupSSH:
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref EC2VPC
      GroupDescription: Open SSH traffic on port 22 from all IPs. Harden for real life, please.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0

  EC2SecurityGroupHTTP:
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref EC2VPC
      GroupDescription: Open HTTP traffic on port 80 from all IPs.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0

  # --- IAM ---
  # https://docs.aws.amazon.com/AmazonECR/latest/userguide/ECR_IAM_policies.html

  # --- Full Access to ECR ---
  # This role gives EC2 instances full access to ECR
  IAMRoleECRFullAccess:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"

  # This policy allows all actions on all ECR resources
  IAMPolicyECRFullAccess:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: ECRFullAccess
      PolicyDocument:
        Statement:
        - Action:
          - "ecr:*"
          Effect: Allow
          Resource: "*"
      Roles:
      - !Ref IAMRoleECRFullAccess

  # This profile allows all actions on all ECR resources
  IAMInstanceProfileECRFullAccess:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Path: "/"
      Roles:
        - !Ref IAMRoleECRFullAccess

  # --- Full Access to ECS ---
  # This role gives EC2 instances full access to ECS
  IAMRoleECSFullAccess:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"

  # This policy allows all actions on all ECS resources
  IAMPolicyECSFullAccess:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: ECSFullAccess
      PolicyDocument:
        Statement:
        - Action:
          - "ecs:*"
          Effect: Allow
          Resource: "*"
      Roles:
      - !Ref IAMRoleECSFullAccess

  # This profile allows all actions on all ECS and ECR resources
  IAMInstanceProfileECSFullAccess:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Path: "/"
      Roles:
        - !Ref IAMRoleECSFullAccess

  # --- EC2 Container Instance ---
  # https://docs.aws.amazon.com/AmazonECS/latest/developerguide/instance_IAM_role.html
  # This role allows EC2 instances to register themselves in an ECS Cluster
  IAMRoleEC2ContainerInstance:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"

  # This policy allows EC2 instances to register themselves in an ECS Cluster
  IAMPolicyEC2ContainerInstance:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: ECSFullAccess
      PolicyDocument:
        Statement:
        - Action:
          - "ecs:CreateCluster"
          - "ecs:DeregisterContainerInstance"
          - "ecs:DiscoverPollEndpoint"
          - "ecs:Poll"
          - "ecs:RegisterContainerInstance"
          - "ecs:StartTelemetrySession"
          - "ecs:Submit*"
          - "ecr:GetAuthorizationToken"
          - "ecr:BatchCheckLayerAvailability"
          - "ecr:GetDownloadUrlForLayer"
          - "ecr:BatchGetImage"
          - "logs:CreateLogStream"
          - "logs:PutLogEvents"
          Effect: Allow
          Resource: "*"
      Roles:
      - !Ref IAMRoleEC2ContainerInstance

  # This profile allows EC2 instances to register themselves in an ECS Cluster
  IAMInstanceProfileEC2ContainerInstance:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Path: "/"
      Roles:
        - !Ref IAMRoleEC2ContainerInstance
